# Playground

./: .gitignore  CMakeLists.txt
cmake/: dependencies.cmake
include/: img_wrapper.h  ray_tracing.h  rng.h  sdl_base.h  timer.h  vec_math.h
src/: math_test.cpp  rng_test.cpp  sdl_base.cpp  unsorted.cpp
